[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/sprites/Menu Button Normal.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/RobotoBold14.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/DefaultButton.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="DefaultButton" type="Button"]
margin_right = 150.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0.37, 0.37, 0.37, 1 )
custom_colors/font_color = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.235294, 0.235294, 0.235294, 1 )
shortcut_in_tooltip = false
text = "Default Button"
flat = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture" type="NinePatchRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
patch_margin_left = 7
patch_margin_top = 4
patch_margin_right = 7
patch_margin_bottom = 5

[node name="SFX" type="AudioStreamPlayer" parent="."]
bus = "UI"

[connection signal="button_down" from="." to="." method="_on_Button_down"]
[connection signal="button_up" from="." to="." method="_on_Button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Button_mouse_exited"]
